# perfect-strangers

./: LICENSE.txt  README.md  columns_vs_radix.py  mkdocs.yml  pyproject.toml  sequence_lengths.py
.github/workflows/: docs.yml  publish.yml  tests.yml
docs/: index.md
docs/diagrams/: .gitignore  make_diagrams.sh
docs/diagrams/column_shift/: Makefile  colours.tex  four_shifts.tex  initial.tex  one_shift.tex  submatrix_after.tex  submatrix_before.tex  submatrix_one.tex  submatrix_two.tex  submatrix_zero.tex  three_shifts.tex  transpose_and_shift.tex  two_shifts.tex
docs/diagrams/round_robin/: Makefile  fixed.tex  initial.tex  rotated.tex
docs/scripts/: main.py
docs/stylesheets/: extra.css
docs/theory/: column_shift.md  kirkman.md  overview.md  round_robin.md
docs/usage/: license.md  matcher_objects.md  quick_start.md
src/perfect_strangers/: __about__.py  __init__.py  base_matcher.py  column_shift_matcher.py  kirkman_triple_matcher.py  radix_matcher.py  round_robin_matcher.py  util.py
tests/: matcher_validation.py  matcher_verifications.py  test_column_shift_matching.py  test_kirkman_triple_matching.py  test_least_prime_factors.py  test_number_theory.py  test_radix_matching.py  test_round_robin_matching.py
