[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "perfect-strangers"
dynamic = ["version"]
description = 'Algorithms for perfect stranger matching in multi-round experiments.'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Sean Enderby", email = "sean.enderby@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "numpy~=2.0",
  "galois~=0.4"
]

[project.urls]
Documentation = "https://github.com/seanlikeskites/perfect-strangers#readme"
Issues = "https://github.com/seanlikeskites/perfect-strangers/issues"
Source = "https://github.com/seanlikeskites/perfect-strangers"

[tool.hatch.version]
path = "src/perfect_strangers/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
  "pytest"
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/perfect_strangers tests}"

[tool.hatch.envs.hatch-test]
extra-dependencies = [
  "sympy"
]

[tool.coverage.run]
source_pkgs = ["perfect_strangers"]
branch = true
parallel = true
omit = [
  "src/perfect_strangers/__about__.py",
]

[tool.coverage.paths]
perfect_strangers = ["src/perfect_strangers", "*/perfect-strangers/src/perfect_strangers"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
