[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "perfect-strangers"
dynamic = ["version"]
description = "Non-search based routines for perfect stranger matching in behavioural studies."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "Sean Enderby", email = "sean.enderby@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "numpy~=2.0",
  "galois~=0.4"
]

[project.urls]
Documentation = "https://senderby.co.uk/perfect-strangers"
Issues = "https://github.com/seanlikeskites/perfect-strangers/issues"
Source = "https://github.com/seanlikeskites/perfect-strangers"

[tool.hatch.version]
path = "src/perfect_strangers/__about__.py"

[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.10", "3.11", "3.12", "3.13", "3.14"]

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
  "pytest"
]

[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/perfect_strangers tests}"

[tool.coverage.run]
source_pkgs = ["perfect_strangers"]
branch = true
parallel = true
omit = [
  "src/perfect_strangers/__about__.py",
]

[tool.coverage.paths]
perfect_strangers = ["src/perfect_strangers", "*/perfect-strangers/src/perfect_strangers"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.hatch.envs.docs]
dependencies = [
  "mkdocstrings-python",
  "zensical"
]

[tool.hatch.envs.docs.scripts]
serve = "zensical serve"
build = "zensical build"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/docs",
  "/mkdocs.yml"
]

[tool.hatch.build.targets.wheel]
packages = ["src/perfect_strangers"]

[publish.index.repos.main]
url = "https://upload.pypi.org/legacy/"

[publish.index.repos.test]
url = "https://test.pypi.org/legacy/"
